# ALK-V

./: README.md  alkv.bash
.github/workflows/: ci.yml
alkv-java/: build.gradle.kts  factorial.alkv  hmm.alkb  is_prime.alkv  settings.gradle.kts  sieve.alkv  sum.alkv  test.alk  test.alkb  test.alkv  test1.alkv
alkv-java/src/: bubble.alkb  bubble.alkv  factorial.alkb  factorial.alkv  test.alkb  test.alkv
alkv-java/src/main/java/alkv/ast/: Program.java
alkv-java/src/main/java/alkv/bytecode/: ConstPool.java  Emitter.java  Insn.java  Label.java  Lowering.java  ModuleCompiler.java  Opcode.java  SingleFunctionCompiler.java
alkv-java/src/main/java/alkv/cli/: Main.java
alkv-java/src/main/java/alkv/io/: AlkbReader.java  AlkbWriter.java
alkv-java/src/main/java/alkv/lexer/: Lexer.java  LexerException.java  Token.java  TokenType.java
alkv-java/src/main/java/alkv/parser/: Parser.java
alkv-java/src/main/java/alkv/sema/: ClassSymbol.java  FuncSymbol.java  Scope.java  SemanticException.java  Symbol.java  SymbolTable.java  TypeChecker.java  TypeResolver.java  VarSymbol.java
alkv-java/src/main/java/alkv/types/: ArrayType.java  ClassType.java  PrimitiveType.java  Type.java  TypeUtil.java
alkv-java/src/test/java/alkv/lexer/: LexerTest.java
runtime/: CMakeLists.txt
runtime/include/alkv/: vm.hpp
runtime/include/alkv/bytecode/: bytecode.hpp  loader.hpp
runtime/include/alkv/compiler/: compiler.hpp
runtime/include/alkv/vm/: heap.hpp  memory.hpp  object.hpp  value.hpp
runtime/src/: compiler.cpp  loader.cpp  main.cpp  vm.cpp
(+34 files in other folders)
